--- a/abstract.Rmd
+++ b/abstract.Rmd
@@ -2,5 +2,5 @@
 output: pdf_document
 ---
 
-In this end-of-degree project, an attempt has been made to analyze the different methods for the distribution of seats, focusing on it from a perspective where each method is analyzed by experimentally varying the seats to be distributed, the number of parties that stand for election or the concentration of the vote.
-Another block analyzes the degree of disproportion and the different seats obtained that result from having carried out the elections in Spain according to the different methods of distribution of seats.
+In this final degree project, an attempt has been made to analyze the different methods for the distribution of seats, focusing on it from a perspective where each method is analyzed by experimentally varying the seats to be distributed, the number of parties that stand for election or the concentration of the vote.
+A second block analyzes the degree of disproportion and the different seats obtained that result from having carried out the elections in Spain according to the different methods of distribution of seats. The last block analyzes the influence of the delimitation by provinces in the elections with respect to the elections being carried out by single constituency.
